--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 html {
   box-sizing: border-box;
 }
 
-*,*:before,*:after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
 }
 
 body {
-  background-color: #D8E1E9;
+  background-color: #d8e1e9;
   height: 100vh;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 main {
@@ -41,8 +43,6 @@ main {
   align-items: center;
   gap: 20px;
 }
-
-
 
 .card_header .card_header-perfil img {
   width: 60px;
@@ -73,7 +73,7 @@ main {
 
 .card_body-description p {
   font-size: 14px;
-  color: rgba(0,0,0,0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .card_body-description span {
@@ -87,4 +87,87 @@ main {
 .card_body-img {
   width: 100%;
   margin-top: 17px;
+}
+
+.card_body-stats {
+  margin-top: 21px;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.card_body-stats_item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.card_body-stats_item img {
+  height: 16px;
+}
+
+.card_body-stats_item:nth-child(1) img {
+  width: 18px;
+}
+.card_body-stats_item:nth-child(2) img {
+  width: 15px;
+}
+.card_body-stats_item:nth-child(3) img {
+  width: 20px;
+}
+
+.card_footer {
+  margin-top: 37px;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.card_footer img {
+  width: 46px;
+}
+
+.card_footer-input {
+  flex: 1;
+  position: relative;
+}
+
+.card_footer-input input {
+  width: 100%;
+  height: 46px;
+  border-radius: 10px;
+  border: none;
+  background-color: #f0f1f4;
+  padding: 0 13px;
+  font-family: inherit;
+  font-size: 16px;
+}
+
+.card_footer-input input::placeholder {
+  color: rgba(0, 0, 0, 0.27);
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.card_footer-input input:focus {
+  outline: none;
+  border: 2px solid #00bcd4;
+}
+
+.card_footer-input::before,
+.card_footer-input::after {
+  position: absolute;
+  width: 12px;
+  height: 13px;
+  top: 10px;
+}
+
+.card_footer-input::before {
+  content: url("./img/icon-face.png");
+  right: 80px;
+}
+
+.card_footer-input::after {
+  content: url("./img/icon-picture.png");
+  right: 30px;
 }
